[project]
name = "mypy-playground"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "aiodocker>=0.13.0,<1.0",
    "google-auth",
    "prometheus-client<1",
    "requests",
    "tornado>=6,<7",
]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-randomly",
    "pytest-tornado",
    "types-chardet",
    "types-mock",
    "types-setuptools",
    "types-toml",
]

[tool.pytest]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--cov=mypy_playground",
]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = [
    "google.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # flake8-bandit: assert
    "S101",
]
